unpackaged/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>Stores patient registration details for specific medical camps.</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>