unpackaged/main/default/objects/Appointment__c/fields/Medical_Camp__c.field-meta.xml
<CustomField>
    <fullName>Medical_Camp__c</fullName>
    <label>Medical Camp</label>
    <referenceTo>Medical_Camp__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>