unpackaged/main/default/objects/Appointment__c/fields/Medical_Camp_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Camp_Name__c</fullName>
    <formula>Medical_Camp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Camp Name</label>
    <type>Text</type>
</CustomField>