unpackaged/main/default/objects/Appointment__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>TE</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>