unpackaged/main/default/objects/Appointment__c/fields/Reminder_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Opt In</label>
    <type>Checkbox</type>
</CustomField>