unpackaged/main/default/objects/Appointment__c/fields/Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waitlist</label>
    <type>Checkbox</type>
</CustomField>